Dejar solo el readme en la raiz de code, eliminando la versión leeme en castellano. Incluir en el readme la información sobre empaquetado de la versión. Añadir al pom padre el plugin deploy de maven, para que funcione la creación automática del tag.
git-svn-id: http://scmcit.gva.es/svn/gvnix/trunk/code@751 69435866-3869-0410-973d-9f951a852354